--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -49,10 +49,10 @@
     <ion-nav-view name="test-tab"></ion-nav-view>
   </ion-tab> -->
 
-  <!-- Changes Tab
-  <ion-tab title="Changes" icon="icon ion-clipboard" href="#/tab/change">
+  <!-- Changes Tab -->
+  <ion-tab hidden=true title="Changes" icon="icon ion-clipboard" href="#/tab/change">
     <ion-nav-view name="change-tab"></ion-nav-view>
-  </ion-tab> -->
+  </ion-tab>
 
   <!-- GPS Detail -->
   <ion-tab title="GPS" icon="icon ion-ios7-eye" href="#/tab/debug">
