--- a/templates/jseaQuestions.html
+++ b/templates/jseaQuestions.html
@@ -10,7 +10,7 @@
 
     <ion-list>
 
-        <ion-item class="jsea-item" ng-repeat=" jseaQuestion in jseaQuestions track by $index" type="item-text-wrap">
+        <ion-item class="jsea-item item-text-wrap" ng-repeat=" jseaQuestion in jseaQuestions track by $index" type="item-text-wrap">
 
 			<ion-checkbox class="item-checkbox-right jsea-item jseaQuestion.jdqDivider?'item-divider':'' " ng-model="jseaQuestion.jdqCbox" 
 					ng-change="checkJdqResponse(jseaQuestion.jdqCbox,jseaQuestion.jdqType,jseaQuestion.jdqOrder,jseaQuestion.jdqNewForm,jseaQuestion.jdqNewFormType)"> 
