Button for SOD testing

--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -187,6 +187,12 @@
 				Delete
 			</button>
 		</ion-item>
+		<ion-item class="item item-button-right" >
+			Clear current date (for SOD testing)
+			<button class="button button-positive" ng-click="clearSODDate()">
+				Clear
+			</button>
+		</ion-item>
 	</span>
 
 	<div class="item item-divider">
