Changed GSCM to generic 'Push'

--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -50,16 +50,16 @@
 	</ion-checkbox>
 
 	<ion-checkbox class="item-checkbox-right" ng-checked="{{devicectrl.registeredForPush}}" ng-disabled="true">
-		Reg'd For Push (GCM)
+		Reg'd For Push 
 	</ion-checkbox>
 	<ion-item class="item item-button-right" >
-		Register for GCM
+		Register for Push
 		<button class="button button-positive" ng-click="pushRegister()">
 			Register
 		</button>
 	</ion-item>
 	<ion-item class="item item-button-right" >
-		UnRegister from GCM
+		UnRegister from Push
 		<button class="button button-light" ng-click="pushDeRegister()">
 			UnRegister
 		</button>
