Link to privacy policy on PDA tab

--- a/templates/tpmPdaController.html
+++ b/templates/tpmPdaController.html
@@ -67,6 +67,13 @@
 	</section>
 -->
 
+		<ion-item
+			<h2>Privacy Policy</h2>
+			<p> See here for app privacy details:
+			<a href="#" onclick="window.open('http://wp.oscsoftware.com.au/index.php/spa-privacy-policy', '_self'); return false">Privacy policy</a>
+			</p>
+		</ion-item>
+
 	</ion-content>
 
 
