new syncstatus show on debug

--- a/templates/jobIndex.html
+++ b/templates/jobIndex.html
@@ -265,6 +265,7 @@
 		<!-- <a href="/debug" target="_blank">Debug</a> -->
 		<strong> connected: {{ connected() }} </strong>
 		<strong> syncing: {{ syncInProgress }} </strong>
+		<strong> syncing: {{ syncstatus }} </strong>
 		<strong> pda_pickup_all: {{ pda_pickup_all }} </strong>
 		<strong> pda_deliver_all: {{ pda_deliver_all }} </strong>
 		<strong> fullStatuses: {{ fullStatuses }} </strong>
