new MULTIDEL notes functionality

--- a/templates/jobDetailContent.html
+++ b/templates/jobDetailContent.html
@@ -124,6 +124,22 @@
 
 		</div>
 
+		<!--   PICKUP  JOB -->
+		<div ng-if="(pdaSignatOnPU && property.enumValue.value == 'AC' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;" >
+			<button tnf-signature-pad ng-model="signatureOne" class="floatLeft" pod-name="podname" my-key="property.legid" my-save-callback="handleJobStatusChange(property.legid,signatureOne,podname)" ng-disabled="syncInProgress"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Pickup
+			</button>
+		</div> 
+		<div ng-if="(!pdaSignatOnPU && property.enumValue.value == 'AC' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;" >
+			<button  class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)" ng-disabled="syncInProgress"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Pickup
+			</button>
+		</div> 
+
 		<!-- ============================================================================================== -->
 		<!--  New intermediary job statuses only shown if site_config FULL_JOB_STATUSES is set -->
 		<!--   Arrive Pup -->
@@ -186,16 +202,6 @@
             </button>
 		</div> 
 		<!-- ============================================================================================== -->
-
-		<!--   PICKUP  JOB -->
-		<div ng-if="(property.enumValue.value == 'AC' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;"
-					>
-			<button  class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)" ng-disabled="syncInProgress"
-				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
-			>
-				Pickup	
-			</button>
-		</div> 
 
 		<!--   COMPLETE JOB -->
 
