placeholder text from bind variable

--- a/templates/notes.html
+++ b/templates/notes.html
@@ -9,7 +9,7 @@
       rows="4" cols="50"
       expanding-textarea
       ng-model="note.text"
-      placeholder="Enter job notes here"
+      placeholder={{placeholderText}}
 	  autofocus
 	>
 	</textarea>
