New status bar overlay checkbox

--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -89,6 +89,10 @@
 		Auto image upload
 	</ion-checkbox>
 
+	<ion-checkbox class="item-checkbox-right" ng-model="this.checked" ng-change="setStatusBarOverlay()">
+		Status bar overlays WebView
+	</ion-checkbox>
+
 	<ion-item class="item item-button-right" >
 		View change data
 		<a class="button button-positive" href="#/tab/change">
