Changes for mandatory photos

--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -136,6 +136,10 @@
 		JSEA applicable
 	</ion-checkbox>
 
+	<ion-checkbox ng-if="pdaParams.experimental" class="item-checkbox-right" ng-model="pdaParams.pda_mandatory_photos" >
+		Mandatory Photos
+	</ion-checkbox>
+
 	<!-- TODO - make this editable -->
 	<ion-item class="item" ng-if="pdaParams.experimental">
 		Image poll time
