--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -22,7 +22,8 @@
   <!-- Edit Tab  - hidden from display - only accessible when selecting a job -->
   <!-- Required the hack in lib/js/ionic.bundle.js per https://github.com/driftyco/ionic/issues/1666 -->
   <!-- LT - 10/02/2016 - reversed for now - causes error "Cannot call method '$destroy' of undefined" - maybe issue? -->
-  <ion-tab title="Edit" icon="icon ion-edit" href="#/tab/jobs/x">
+  <!-- LT - 09/11/2017 - put back hiddent attribute - let's try again -->
+  <ion-tab title="Edit" icon="icon ion-edit" href="#/tab/jobs/x" hidden="true">
     <ion-nav-view name="job-edit"></ion-nav-view>
   </ion-tab>
 
