Updated privacy policy link

--- a/templates/tpmPdaController.html
+++ b/templates/tpmPdaController.html
@@ -70,7 +70,7 @@
 		<ion-item>
 			<h2>Privacy Policy</h2>
 			<p> See here for app privacy details:
-			<a href="#" onclick="cordova.InAppBrowser.open('http://wp.oscsoftware.com.au/index.php/spa-privacy-policy', '_self'); return false">Privacy policy</a>
+			<a href="#" onclick="cordova.InAppBrowser.open('http://opensyscon.com.au/spa-privacy-policy', '_self'); return false">Privacy policy</a>
 			</p>
 		</ion-item>
 
