Added build property to aid debug of development versions

--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -29,6 +29,13 @@
 		</span>
 	</ion-item>
 
+	<ion-item class="item" >
+		Build
+		<span class="item-note">
+			{{build}}
+		</span>
+	</ion-item>
+
 	<ion-checkbox class="item-checkbox-right" ng-checked="{{devicectrl.isGpsWorking}}" ng-disabled="true">
 		GPS Active
 	</ion-checkbox>
