--- a/templates/jseaQuestions.html
+++ b/templates/jseaQuestions.html
@@ -12,15 +12,34 @@
 
         <ion-item class="jsea-item item-text-wrap" ng-repeat=" jseaQuestion in jseaQuestions track by $index" type="item-text-wrap">
 
+			<div ng-if="pda_jsea_both_yn" class="row">
+				<div class="col">
+				{{jseaQuestion.jdqQuestionText}} 
+				</div>
+
+				<div class="col-30">
+				<label class="checkbox item-checkbox-right floatRight jsea-checkbox" >
+					<input type="radio" name={{$index}} ng-value="'N'" ng-model="jseaQuestion.jdqCbox"
+					ng-change="checkJdqResponse(jseaQuestion.jdqCbox,jseaQuestion.jdqType,jseaQuestion.jdqOrder,jseaQuestion.jdqNewForm,jseaQuestion.jdqNewFormType)"> 
+					</input>
+				</label>
+				<label class="checkbox item-checkbox-right floatRight jsea-checkbox" >
+					<input type="radio" name={{$index}} ng-value="'Y'" ng-model="jseaQuestion.jdqCbox"
+					ng-change="checkJdqResponse(jseaQuestion.jdqCbox,jseaQuestion.jdqType,jseaQuestion.jdqOrder,jseaQuestion.jdqNewForm,jseaQuestion.jdqNewFormType)"> 
+					</input>
+				</label>
+				</div>
+			</div>
+
+			<span ng-if="!pda_jsea_both_yn">
 			<ion-checkbox class="item-checkbox-right jsea-item jseaQuestion.jdqDivider?'item-divider':'' " ng-model="jseaQuestion.jdqCbox" 
 					ng-change="checkJdqResponse(jseaQuestion.jdqCbox,jseaQuestion.jdqType,jseaQuestion.jdqOrder,jseaQuestion.jdqNewForm,jseaQuestion.jdqNewFormType)"> 
-<!--
-            {{jseaQuestion.jdqOrder}} 
-            {{jseaQuestion.jdqType}} 
--->
-            {{jseaQuestion.jdqQuestionText}} 
-			</ion-checkbox> 
-			<!--{{jseaQuestion.jdqType}}  -->
+				{{jseaQuestion.jdqQuestionText}} 
+
+			</ion-checkbox>
+			</span>
+
+
         </ion-item>
     </ion-list>
 
@@ -36,3 +55,8 @@
 
     </ion-content>
 </ion-view>
+<!--
+				{{jseaQuestion.jdqOrder}} 
+				{{jseaQuestion.jdqType}} 
+-->
+			<!--{{jseaQuestion.jdqType}}  -->
