--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -109,6 +109,10 @@
 		Status bar overlays WebView
 	</ion-checkbox>
 
+	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.showLoading" >
+		Show loading messages
+	</ion-checkbox>
+
 	<ion-item class="item item-button-right" >
 		View change data
 		<a class="button button-positive" href="#/tab/change">
