New pdaParams.pda_attached_docs checkbox

--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -113,6 +113,10 @@
 		Show loading messages
 	</ion-checkbox>
 
+	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.pda_attached_docs" >
+		Show attachments
+	</ion-checkbox>
+
 	<ion-item class="item item-button-right" >
 		View change data
 		<a class="button button-positive" href="#/tab/change">
